--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 			      <p>
 				This course is the first semester of a two-semester sequel on quantum theory, stressing principles. <br>
 				Topics covered include: Hilbert spaces, observables, uncertainty relations, eigenvalue problems and methods  <br>
-				for solutions thereof, time-evolution in the Schrödinger, Heisenberg, and interaction pictures, connections  <br>
+				for solutions thereof, time-evolution in the Schr&oumldinger, Heisenberg, and interaction pictures, connections  <br>
 				between classical and quantum mechanics, angular momentum, density operators, and quantum measurement.  <br>
 				The first semester focuses on basic theory while the second semester (PHYS 660) reviews more advanced  <br>
-				theory applications. The first semester covers in particular wave functions and the Schrödinger equation;  <br>
+				theory applications. The first semester covers in particular wave functions and the Schr&oumldinger equation;  <br>
 				the mathematical formalism of quantum mechanics, including Hilbert space, Dirac notation, and operators;  <br>
 				the hydrogen atom; angular momentum and spin.
 				
